- Added http support for connection to non-local repositories (and hopefully svnserve and https, although completely untested). Please don't hammer your svn servers, people, be nice to your admins.